--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,9 @@
 @tailwind utilities;
 
 @layer base {
+	html {
+		font-family: 'Poppins';
+	}
 	html[data-theme='light'] {
 		--color-text-base: #379696;
 		--color-text-header: #0f0;
@@ -31,7 +34,6 @@
 		--linear-from: rgb(141, 151, 157);
 		--linear-to: rgb(214, 214, 214, 0.47);
 		--box-shadow: #bbb;
-		--iconUrl: url('/sun-24.png');
 	}
 
 	html[data-theme='dark'] {
@@ -61,7 +63,6 @@
 		--linear-from: rgb(29, 23, 23);
 		--linear-to: rgba(139, 145, 149, 0.84);
 		--box-shadow: rgb(21, 5, 5);
-		--iconUrl: url('/moon-30.png');
 	}
 
 	html[data-theme='blood'] {
@@ -91,7 +92,6 @@
 		--linear-from: rgb(113, 18, 18);
 		--linear-to: rgba(223, 8, 28, 0.84);
 		--box-shadow: rgb(21, 5, 5);
-		--iconUrl: url('/blood-48.png');
 	}
 
 	@font-face {
@@ -122,7 +122,7 @@
 		@apply text-base;
 	}
 	p {
-		@apply text-xs;
+		@apply text-base;
 	}
 	h1,
 	h2,
